# ARK

./: .clang-format  .clang-format-ignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AStyleExtension-2018-6-29.cfg  AStyleExtension-for-vs.cfg  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  GenerateConfigXML.bat  GenerateConfigXML.sh  Index.html  README.md  README_CN.md  README_EN.md  VERSION  _coverpage.md  _navbar.md  _sidebar.md  app-architecture.md  app.md  benchmark.md  bus-plugin.md  concept.md  create-new-module.md  create-new-plugin.md  data-driven.md  directory-structure.md  directory-sturcture.md  index.html  kernel-plugin.md  net-plugin.md  plan.md  quick-start.md  server-architecture.md  sonar-project.properties
Frame/Launcher/: AFCDynLib.cpp  AFCDynLib.h  AFCPluginManager.cpp  AFCPluginManager.h  AFMain.cpp  CMakeLists.txt  Launcher.vcxproj
Frame/SDK/: CMakeLists.txt
Frame/SDK/Base/: AFArrayMap.hpp  AFArrayPod.hpp  AFBitValue.hpp  AFCAddConsistentHash.hpp  AFCConsistentHash.hpp  AFCData.h  AFCDataList.h  AFCoreDef.hpp  AFDefine.h  AFGUID.h  AFHashmap.h  AFIData.h  AFIDataList.h  AFList.h  AFLockFreeQueue.h  AFMacros.hpp  AFMap.h  AFMapEx.h  AFMemAlloc.hpp  AFMemManger.h  AFMemPool.hpp  AFMisc.hpp  AFNoncopyable.hpp  AFPlatform.hpp  AFQueue.h  AFRWLock.hpp  AFSingleton.hpp  AFString.hpp  AFStringPod.hpp  AFTime.hpp  AFTime.inl  AFTimer.hpp  AFTimerManager.h  AFVector3.hpp  Base.vcxproj  Base.vcxproj.filters  CMakeLists.txt  timer.hpp
Frame/SDK/BusPlugin/: AFBusPlugin.cpp  AFBusPlugin.h  AFCBusConfigModule.cpp  AFCBusConfigModule.h  AFCBusModule.cpp  AFCBusModule.h  AFCMsgModule.cpp  AFCMsgModule.h  BusPlugin.vcxproj  BusPlugin.vcxproj.filters  CMakeLists.txt  dllmain.cpp
Frame/SDK/ConfigPlugin/: AFCClassModule.cpp  AFCClassModule.h  AFCConfigModule.cpp  AFCConfigModule.h  AFCElementModule.cpp  AFCElementModule.h  AFConfigPlugin.cpp  AFConfigPlugin.h  CMakeLists.txt  ConfigPlugin.cbp  ConfigPlugin.vcxproj  ConfigPlugin.vcxproj.filters  NFCClassModule.cpp  NFCClassModule.h  NFCElementModule.cpp  NFCElementModule.h  NFConfigPlugin.h  dllmain.cpp
Frame/SDK/Core/: AFArrayMap.hpp  AFArrayPod.hpp  AFBitValue.hpp  AFBuffer.hpp  AFCAddConsistentHash.hpp  AFCConsistentHash.hpp  AFCData.h  AFCData.hpp  AFCDataList.h  AFCDataList.hpp  AFCDataNodeManager.cpp  AFCDataNodeManager.h  AFCDataTableManager.cpp  AFCDataTableManager.h  AFCEntity.cpp  AFCEntity.h  AFCEventManager.cpp  AFCEventManager.h  AFCHeartBeatManager.cpp  AFCHeartBeatManager.h  AFCMemManger.cpp  AFCMemManger.h  AFCObject.cpp  AFCObject.h  AFCProperty.cpp  AFCProperty.h  AFCPropertyManager.cpp  AFCPropertyManager.h  AFCPropertyMgr.cpp  AFCPropertyMgr.h  AFCRC.hpp  AFCRecord.cpp  AFCRecord.h  AFCRecordManager.cpp  AFCRecordManager.h  AFCRecordMgr.cpp  AFCRecordMgr.h  AFCoreDef.hpp  AFCronScheduler.hpp  AFDataNode.h  (+95 more)
Frame/SDK/EventDefine/: AFEventDefine.h
Frame/SDK/Interface/: AFDLLHeader.h  AFIAccountModule.h  AFIBusModule.h  AFIClassModule.h  AFICommonConfigModule.h  AFIConfigModule.h  AFIElementModule.h  AFIGUIDModule.h  AFIGameLogicModule.h  AFIGameNetServerModule.h  AFIGameServerConfigModule.h  AFIGameServerModule.h  AFIGameServerNet_ClientModule.h  AFIGameServerNet_ServerModule.h  AFIGameServerScriptModule.h  AFIGameServerToWorldModule.h  AFIKernelModule.h  AFILevelModule.h  AFILogModule.h  AFILoginLogicModule.h  AFILoginNetServerModule.h  AFILoginNet_ServerModule.h  AFILoginToMasterModule.h  AFIMapModule.h  AFIMasterModule.h  AFIMasterNetServerModule.h  AFIMasterNet_ServerModule.h  AFIMetaClassModule.h  AFIModule.h  AFIMsgModule.h  AFINet.h  AFINetClientManagerModule.h  AFINetClientModule.hpp  AFINetClientService.h  AFINetModule.h  AFINetServerManagerModule.h  AFINetServerModule.h  AFINetServerService.h  AFIPlugin.h  (+44 more)
Frame/Server/: CMakeLists.txt
dep/: CMakeLists.txt  README.md  build_dep.bat  build_dep.sh  build_dep_darwin.sh
dep/common/: lexical_cast.hpp  readerwriterqueue.h
dep/rapidxml/: rapidxml_iterators.hpp  rapidxml_utils.hpp
examples/: CMakeLists.txt
examples/http_client/: CMakeLists.txt  HttpClientSampleModule.cpp  HttpClientSampleModule.h  HttpClientSamplePlugin.cpp  HttpClientSamplePlugin.h
examples/kcptool/: AFPhotonSS_pb2.py  CMakeLists.txt  demo.py  gen_proto.sh  tool.cpp
examples/mysql_sample/: CMakeLists.txt  MysqlSampleModule.cpp  MysqlSampleModule.h  MysqlSamplePlugin.cpp  MysqlSamplePlugin.h
examples/redis_sample/: CMakeLists.txt  RedisSampleModule.cpp  RedisSampleModule.h  RedisSamplePlugin.cpp  RedisSamplePlugin.h
examples/sample1/: Sample1Module.cpp  Sample1Module.h  Sample1Plugin.cpp  Sample1Plugin.h
examples/sample2/: Sample2Module.cpp  Sample2Module.h  Sample2Plugin.cpp  Sample2Plugin.h
examples/sample3/: Sample3Module.cpp  Sample3Module.h  Sample3Plugin.cpp  Sample3Plugin.h
examples/sample4/: CMakeLists.txt  Sample4Module.cpp  Sample4Module.h  Sample4Plugin.cpp  Sample4Plugin.h
examples/sample5/: CMakeLists.txt  Sample5Module.cpp  Sample5Module.h  Sample5Plugin.cpp  Sample5Plugin.h
frame/app/: AFCDynLib.cpp  AFCDynLib.h  AFCPluginManager.cpp  AFCPluginManager.h  AFMain.cpp  CMakeLists.txt  app.vcxproj  app.vcxproj.filters
frame/sdk/: CMakeLists.txt
samples/: CMakeLists.txt
samples/sample1/: CMakeLists.txt  Sample1Module.cpp  Sample1Module.h  Sample1Plugin.cpp  Sample1Plugin.h
samples/sample2/: CMakeLists.txt  Sample2Module.cpp  Sample2Module.h  Sample2Plugin.cpp  Sample2Plugin.h  dllmain.cpp
samples/sample3/: DataNewTestModule.cpp  DataNewTestModule.h  Sample3Module.cpp  Sample3Module.h  Sample3Plugin.cpp  Sample3Plugin.h
src/app/: AFCDynLib.cpp  AFCDynLib.h  AFCPluginManager.cpp  AFCPluginManager.h  AFCPluginManager.hpp  AFMain.cpp  CMakeLists.txt
src/plugin/: CMakeLists.txt  README.md
src/plugins/: CMakeLists.txt  README.md
src/proto/: AFProtoCPP.hpp  CMakeLists.txt  gen-proto.bat
src/server/: CMakeLists.txt
test/: CMakeLists.txt  catch.hpp  test.cpp  test_base64.cpp  test_datetime.cpp  test_hex.cpp  test_lz4.cpp  test_random.cpp  test_singleton.cpp  test_xxtea.cpp  test_zlib.cpp  test_zstd.cpp
(+5693 files in other folders)
